--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
     <div class="container">
         <span class="ad-label">Advertisement</span>
         <div class="ad-container">
-            <div class="ad-unit rectangle" id="ad-unit-2">
+            <div class="ad-unit rectangle" id="ad-unit-2">ca-app-pub-7184084592363514/2274678340
                 <!-- AdSense Code Will Go Here -->
                 AdSense Rectangle (300x250)
             </div>
